--- a/index.html
+++ b/index.html
@@ -1132,12 +1132,41 @@ function hideExportProgress() {
   const card = document.createElement("div");
   card.className = "catch-card";
 
-  const img = document.createElement("img");
-  img.src = photo.src;
-  img.alt = photo.caption || "Catch photo";
-  img.className = "catch-photo";
-  img.addEventListener("click", () => openModal(photo.src));
-  card.appendChild(img);
+  // If videoBlob exists but videoSrc doesn't, create an object URL
+  if (!photo.videoSrc && photo.videoBlob instanceof Blob) {
+    photo.videoSrc = URL.createObjectURL(photo.videoBlob);
+  }
+
+  let mediaElement;
+
+  if (photo.videoSrc) {
+    mediaElement = document.createElement("video");
+
+    mediaElement.muted = true;
+    mediaElement.volume = 0;
+    mediaElement.defaultMuted = true;
+    mediaElement.addEventListener("volumechange", () => {
+      if (!mediaElement.muted || mediaElement.volume > 0) {
+        mediaElement.muted = true;
+        mediaElement.volume = 0;
+      }
+    });
+
+    mediaElement.src = photo.videoSrc;
+    mediaElement.autoplay = true;
+    mediaElement.loop = true;
+    mediaElement.playsInline = true;
+    mediaElement.className = "catch-photo";
+    mediaElement.addEventListener("click", () => openModal(photo.videoSrc));
+  } else if (photo.src) {
+    mediaElement = document.createElement("img");
+    mediaElement.src = photo.src;
+    mediaElement.alt = photo.caption || "Catch photo";
+    mediaElement.className = "catch-photo";
+    mediaElement.addEventListener("click", () => openModal(photo.src));
+  }
+
+  if (mediaElement) card.appendChild(mediaElement);
 
   const info = document.createElement("div");
   info.className = "catch-info";
@@ -1188,12 +1217,12 @@ function hideExportProgress() {
   const shareButton = document.createElement("button");
   shareButton.textContent = "Catch Card";
   shareButton.addEventListener("click", () => {
-    // Automatically pick the right export method based on file type
     const isGif =
-  (photo.type && photo.type === "image/gif") ||
-  (photo.name && photo.name.toLowerCase().endsWith(".gif")) ||
-  photo.src.toLowerCase().includes(".gif") ||
-  photo.src.toLowerCase().includes("image/gif");
+      (photo.type && photo.type === "image/gif") ||
+      (photo.name && photo.name.toLowerCase().endsWith(".gif")) ||
+      (photo.src && photo.src.toLowerCase().includes(".gif")) ||
+      (photo.src && photo.src.toLowerCase().includes("image/gif"));
+
     if (isGif) {
       exportCatchCardAsGif(card, photo); // animated export
     } else {
@@ -1204,11 +1233,9 @@ function hideExportProgress() {
 
   card.appendChild(buttonRow);
 
-  // 👇 Add new photo to the top of the gallery
-gallery.prepend(card);
-
-// 👇 Smooth scroll the new card into view
-card.scrollIntoView({ behavior: "smooth", block: "start" });
+  // Add to top of gallery and scroll into view
+  gallery.prepend(card);
+  card.scrollIntoView({ behavior: "smooth", block: "start" });
 }
   
 async function renderPhotoPosts() {
